fix the slug in dad jokes.md

--- a/content/posts/20190626_dad_jokes.md
+++ b/content/posts/20190626_dad_jokes.md
@@ -2,7 +2,7 @@ Title: Pelican Everywhere
 Date: 2019-06-26
 Category: GitLab
 Tags: pelican, gitlab
-Slug: pelican-everywhere
+Slug: useless-slug-qweasdnj123jndq
 
 Found on https://jokes.skem9.co.uk/cat/Dead-and-dying-jokes/
 
